# vae

./: .env  .gitignore  mise.toml  pyproject.toml  vae_v1.py
models/: note.txt  scvi_vamp_prior.py  vae_v5.py
models/sysvi/: _model.py  _module.py
scripts/: test_scvi.ipynb  train_vae_v1.ipynb  train_vae_v2.ipynb  vae_v1.py  vae_v2.py  vae_v3.py  vae_v4.py  vae_v6.py
