[project]
name = "vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "torchvision",
  "lightning",
  "numpy<2.0.0",
  "tensorboard>=2.19.0",
  "scvelo>=0.3.3",
  "cellrank>=2.0.7",
  "zarr<3.0",
  "scvi-tools>=1.3.3",
  "ipywidgets>=8.1.7",
  "ipynbname>=2025.8.0.0",
  "bbknn>=1.6.0",
  "harmonypy>=0.0.10",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
